Install Cranelift if you want to use Cranelift, of course

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: nightly
+          components: rustc-codegen-cranelift
           cache: false
       - name: Test
         run: |
